--- a/coded_correspondence.ipynb
+++ b/coded_correspondence.ipynb
@@ -21,10 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hey there! this is an example of a caesar cipher. were you able to decode it? i hope so! send me a message back with the same offset!'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alphabet = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "punctuation = \",.!? \"\n",
+    "message_ciphered = \"xuo jxuhu! jxyi yi qd unqcfbu ev q squiqh syfxuh. muhu oek qrbu je tusetu yj? y xefu ie! iudt cu q cuiiqwu rqsa myjx jxu iqcu evviuj!\"\n",
+    "message_unciphered = \"\"\n",
+    "for i in message_ciphered:\n",
+    "    if i not in punctuation:\n",
+    "        letter_position = alphabet.find(i)\n",
+    "        message_unciphered += alphabet[(letter_position + 10) % 26]\n",
+    "    else:\n",
+    "        message_unciphered += i\n",
+    "message_unciphered  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,10 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'oui! yj mqi q byjjbu xqht, rkj yj mqi ydjuhuijydw!'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message_to_send_unciphered = \"yes! it was a little hard, but it was interesting!\"\n",
+    "message_to_send_ciphered = \"\"\n",
+    "for i in message_to_send_unciphered:\n",
+    "    if i not in punctuation:\n",
+    "        letter_position = alphabet.find(i)\n",
+    "        message_to_send_ciphered += alphabet[(letter_position - 10) % 26]\n",
+    "    else:\n",
+    "        message_to_send_ciphered += i\n",
+    "message_to_send_ciphered\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,17 +110,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def decoder(message, offset):\n",
+    "    message_returned = \"\"\n",
+    "    for i in message:\n",
+    "        if i not in punctuation:\n",
+    "            letter_position = alphabet.find(i)\n",
+    "            message_returned += alphabet[(letter_position + offset) % 26]\n",
+    "        else:\n",
+    "            message_returned += i\n",
+    "    return message_returned"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def coder(message, offset):\n",
+    "    message_returned = \"\"\n",
+    "    for i in message:\n",
+    "        if i not in punctuation:\n",
+    "            letter_position = alphabet.find(i)\n",
+    "            message_returned += alphabet[(letter_position - offset) % 26]\n",
+    "        else:\n",
+    "            message_returned += i\n",
+    "    return message_returned"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,10 +165,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vhfinmxkl atox kxgwxkxw tee hy maxlx hew vbiaxkl tl hulhexmx. pxzee atox mh kxteer lmxi ni hnk ztfx by px ptgm mh dxxi hnk fxlltzxl ltyx.\n",
+      "wigjonylm bupy lyhxylyx uff iz nbymy ifx wcjbylm um ivmifyny. qyaff bupy ni lyuffs mnyj oj iol augy cz qy quhn ni eyyj iol gymmuaym muzy.\n",
+      "xjhkpozmn cvqz mziyzmzy vgg ja ocznz jgy xdkczmn vn jwnjgzoz. rzbgg cvqz oj mzvggt nozk pk jpm bvhz da rz rvio oj fzzk jpm hznnvbzn nvaz.\n",
+      "ykilqpano dwra najzanaz whh kb pdaoa khz yeldano wo kxokhapa. sachh dwra pk nawhhu opal ql kqn cwia eb sa swjp pk gaal kqn iaoowcao owba.\n",
+      "zljmrqbop exsb obkaboba xii lc qebpb lia zfmebop xp lyplibqb. tbdii exsb ql obxiiv pqbm rm lro dxjb fc tb txkq ql hbbm lro jbppxdbp pxcb.\n",
+      "amknsrcpq fytc pclbcpcb yjj md rfcqc mjb agnfcpq yq mzqmjcrc. ucejj fytc rm pcyjjw qrcn sn msp eykc gd uc uylr rm iccn msp kcqqyecq qydc.\n",
+      "bnlotsdqr gzud qdmcdqdc zkk ne sgdrd nkc bhogdqr zr narnkdsd. vdfkk gzud sn qdzkkx rsdo to ntq fzld he vd vzms sn jddo ntq ldrrzfdr rzed.\n",
+      "computers have rendered all of these old ciphers as obsolete. wegll have to really step up our game if we want to keep our messages safe.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'computers have rendered all of these old ciphers as obsolete. wegll have to really step up our game if we want to keep our messages safe.'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coded_message1 = \"vhfinmxkl atox kxgwxkxw tee hy maxlx hew vbiaxkl tl hulhexmx. px'ee atox mh kxteer lmxi ni hnk ztfx by px ptgm mh dxxi hnk fxlltzxl ltyx.\"\n",
+    "\n",
+    "for i in range(0,8):\n",
+    "    print(decoder(coded_message1, i))\n",
+    "\n",
+    "decoder(coded_message1, 7)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,10 +251,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'you were able to decode this? nice work! you are becoming quite the expert at crytography!'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message_to_decode = \"dfc aruw fsti gr vjtwhr wznj? vmph otis! cbx swv jipreneo uhllj kpi rahjib eg fjdkwkedhmp!\"\n",
+    "keyword_phrase = \"friends\"\n",
+    "\n",
+    "def adapt_keyword(mssge_to_decode, kwrd_phrase):\n",
+    "    keyword_phrase_lenghted = \"\"\n",
+    "    message_pointer = 0\n",
+    "    for i in range(len(mssge_to_decode)):\n",
+    "        if mssge_to_decode[i] not in punctuation:\n",
+    "            keyword_phrase_lenghted += kwrd_phrase[message_pointer % len(kwrd_phrase)]\n",
+    "            message_pointer += 1\n",
+    "        else:\n",
+    "            keyword_phrase_lenghted += mssge_to_decode[i]\n",
+    "    return keyword_phrase_lenghted\n",
+    "\n",
+    "keyword_phrase_adapted1 = adapt_keyword(message_to_decode, keyword_phrase)\n",
+    "# print(keyword_phrase_adapted1)\n",
+    "\n",
+    "def vc_decoding(message, keyword):\n",
+    "    returning_message = \"\"\n",
+    "    adpted_keywrd = adapt_keyword(message, keyword)\n",
+    "    for i in range(0, len(message)):\n",
+    "        if message[i] not in punctuation:\n",
+    "            message_letter_pos = alphabet.find(message[i])\n",
+    "            keyword_pos = alphabet.find(adpted_keywrd[i])\n",
+    "            returning_message += alphabet[(message_letter_pos - keyword_pos ) % 26]\n",
+    "        else:\n",
+    "            returning_message += message[i]       \n",
+    "    return returning_message\n",
+    "\n",
+    "vc_decoding(message_to_decode, keyword_phrase)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,10 +312,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yyqw jdk fe iqncasx bvnlfneo eormy vvgelhyzwr!!, v zaqc ksawaslm ql wjfzvmaj!!!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'this was an amazing training about encription!!, i will continue my training!!!'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message_to_encode = \"this was an amazing training about encription!!, i will continue my training!!!\"\n",
+    "\n",
+    "\n",
+    "def vc_encoding(message, keyword):\n",
+    "    returning_message = \"\"\n",
+    "    adpted_keywrd = adapt_keyword(message, keyword)\n",
+    "    for i in range(0, len(message)):\n",
+    "        if message[i] not in punctuation:\n",
+    "            message_letter_pos = alphabet.find(message[i])\n",
+    "            keyword_pos = alphabet.find(adpted_keywrd[i])\n",
+    "            returning_message += alphabet[(message_letter_pos + keyword_pos ) % 26]\n",
+    "        else:\n",
+    "            returning_message += message[i]       \n",
+    "    return returning_message\n",
+    "\n",
+    "encoded_message = vc_encoding(message_to_encode, keyword_phrase)\n",
+    "print(encoded_message)\n",
+    "vc_decoding(encoded_message, keyword_phrase)"
+   ]
   },
   {
    "cell_type": "markdown",
